<resources>
    <string name="app_name">shop</string>
    <string name="home">Home</string>
    <string name="categery">Category</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="category_fragment">Category fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="welcome">Welcome</string>
    <string name="des">We happy to see you again to use your account,  you should login first</string>
    <string name="Login_des">Log in with one of the following Option</string>
    <string name="mobile_number"> Mobile Number</string>
    <string name="_continue">Continue</string>
    <string name="search">Search here....</string>
    <string name="shoes_1">shoes</string>
    <string name="trending_products">Trending products</string>
    <string name="pendrive">pendrive</string>
    <string name="wishlist">WishList</string>
    <string name="browse">browse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="category">Categories</string>
    <string name="vivek">Vivek Rathore</string>
    <string name="order">My Order</string>
    <string name="review">My Reviews</string>
    <string name="address">My Address</string>
    <string name="terms"> Terms and Conditions</string>
    <string name="customer">Customer Care</string>
    <string name="white_mode">white mode</string>
    <string name="languages">Languages</string>
    <string name="notification">Notification</string>
    <string name="save_for_later">Save for later</string>
    <string name="fashion">Fashion</string>
    <string name="fas_des">Top Wear, Women Ethic,kids and more…</string>
    <string name="my_order">My Order</string>
    <string name="title_activity_bottom_navigation">bottom_navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="_123456">123456....</string>
    <string name="_91">+91 |</string>
    <string name="buy">Buy</string>
    <string name="email_notification">Email Notification</string>
    <string name="general_notifications">General Notifications</string>
    <string name="new_amp_updates"><![CDATA[New & Updates]]></string>
    <string name="payments">Payments</string>
    <string name="special_offers">Special Offers</string>
    <string name="cashback">Cashback</string>
    <string name="notifications">Notifications</string>
    <string name="black_image">black image</string>
    <string name="arabic">Arabic</string>
    <string name="chinise">Chinise</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="hindi">Hindi</string>
    <string name="itallian">Itallian</string>
    <string name="spanish">Spanish</string>
    <string name="we_are_ready_to_offer_something_special">We are ready to offer something special</string>
    <string name="hi">Hi ,</string>
    <string name="vivek_">Vivek</string>
    <string name="vivek_rathore">Vivek Rathore</string>
    <string name="my_profile">my profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="_123456789">123456789</string>
    <string name="select_a_date_of_birth">Select A date of birth</string>
    <string name="gender">Gender</string>
    <string name="letest_iphone_and_realme_14_pro_and_more">Letest iPhone and Realme 14 pro and more.....</string>
    <string name="home_dacor_furniture_kids_furniture_and_more">Home dacor, Furniture , kids Furniture and more....</string>
    <string name="electronic">Electronic</string>
    <string name="letest_iphone">Letest iPhone and Realme 14 pro and more.....</string>
    <string name="shoes">Shoes</string>
    <string name="top_wear_women_ethic_and_many_more">Top wear, Women Ethic and many more...</string>
    <string name="mobiles">Mobiles</string>
    <string name="v">Top wear, Women Ethic and many more...</string>
    <string name="silk_saree">Silk Saree</string>
    <string name="black_red">(Black, Red)</string>
    <string name="pink_orange_red_green">(Pink, Orange, Red, Green)</string>
    <string name="hi_">Hi ,</string>
</resources>