<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Languages">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/arrow_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/baseline_arrow_back_24"
        android:padding="10dp" />

    <TextView
        android:id="@+id/wishlist"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="151dp"
        android:layout_toEndOf="@+id/arrow_back"
        android:paddingTop="-5dp"
        android:text="@string/languages"
        android:textColor="@color/white"
        android:textSize="30sp" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="551dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="245dp"
        android:background="@color/black"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/Arabic"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="@color/black"
            android:text="@string/arabic"
            android:textColor="#FDFCFC"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/Chinise"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="@color/black"
            android:text="@string/chinise"
            android:textColor="#FDFCFC"
            android:textSize="20sp" />


        <RadioButton
            android:id="@+id/German"
            android:layout_width="match_parent"
            android:layout_height="69dp"

            android:background="@color/black"
            android:text="@string/german"
            android:textColor="#FDFCFC"
            android:textSize="20sp" />


        <RadioButton
            android:id="@+id/English"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="@color/black"
            android:text="@string/english"
            android:textColor="#FDFCFC"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/French"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="@color/black"
            android:text="@string/french"
            android:textColor="#FDFCFC"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/Hindi"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="@color/black"
            android:text="@string/hindi"
            android:textColor="#FDFCFC"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/Itallian"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="@color/black"
            android:text="@string/itallian"
            android:textColor="#FDFCFC"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/Spanish"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="@color/black"
            android:text="@string/spanish"
            android:textColor="#FDFCFC"
            android:textSize="20sp" />

    </RadioGroup>

    <androidx.appcompat.widget.SearchView
        android:layout_width="22dp"
        android:layout_height="23dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="37dp"

        android:layout_marginEnd="38dp"
        android:layout_marginBottom="831dp"
        android:background="@drawable/search" />


</RelativeLayout>