<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_user">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@color/black"
        android:contentDescription="@string/black_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="35sp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="30dp"
        android:text="@string/des"
        android:textColor="@color/white"
        android:textSize="15sp"

        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="280dp" />


    <EditText
        android:id="@+id/number"
        android:layout_width="550dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="80dp"
        android:autofillHints="344333"
        android:background="@drawable/number_shape"
        android:hint="@string/_123456"
        android:inputType="phone"
        android:paddingStart="70dp"
        android:paddingTop="20dp" />

    <TextView
        android:layout_width="10dp"
        android:layout_height="50dp" />


    <!--    <TextView-->

<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/number"-->
<!--        android:layout_marginStart="120dp"-->
<!--        android:layout_marginTop="-28dp"-->
<!--        android:text="@string/_91"-->
<!--        android:textSize="18sp" />-->


    <ImageView
        android:id="@+id/flag"
        android:layout_width="45dp"
        android:layout_height="34dp"
        android:layout_alignStart="@+id/number"
        android:layout_alignBottom="@+id/number"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="9dp"
        android:src="@drawable/india" />


    <TextView
        android:id="@+id/text"
        android:layout_width="126dp"
        android:layout_height="23dp"
        android:layout_alignEnd="@+id/number"
        android:layout_alignBottom="@+id/number"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="26dp"
        android:text="@string/mobile_number"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/_continue"
        android:layout_width="370dp"
        android:layout_height="64dp"
        android:layout_below="@id/number"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="69dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/shape"
        android:text="@string/_continue"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="7dp"
        android:rotationY="2"
        android:text="@string/Login_des"
        android:textColor="@color/black" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="273dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="35dp">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="46dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/google"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/apple"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="46dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/apple"
            android:gravity="center" />
    </RelativeLayout>
</RelativeLayout>