<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Notification">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/arrow_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:background="@drawable/baseline_arrow_back_24"
        />

    <TextView
        android:id="@+id/wishlist"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="151dp"
        android:layout_toEndOf="@+id/arrow_back"
        android:paddingTop="-5dp"
        android:text="@string/notifications"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="371dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
         android:paddingStart="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/email_notification"
              android:colorControlActivated="@color/switch_on_color"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:switchMinWidth="45dp"
            app:switchPadding="5dp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/general_notifications"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:switchMinWidth="45dp"
            app:switchPadding="5dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch3"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/new_amp_updates"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:switchMinWidth="45dp"
            app:switchPadding="5dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/special_offers"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:switchMinWidth="45dp"
            app:switchPadding="5dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/payments"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:switchMinWidth="45dp"
            app:switchPadding="5dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:paddingTop="2dp"
            android:text="@string/cashback"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:switchMinWidth="45dp"
            app:switchPadding="5dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch7"
            android:layout_width="match_parent"
            android:layout_height="734dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:paddingTop="1000dp"
            app:switchPadding="5dp" />
    </LinearLayout>
</RelativeLayout>