<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="Fragments.profileFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/profile"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20sp"
        android:textSize="40sp"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:id="@+id/name"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:text="@string/vivek"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/profile_shape">

        <TextView
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="138dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/profile_shape"
            android:paddingStart="25sp"
            android:text="@string/vivek_rathore"
            android:textColor="#fff"
            android:textSize="28sp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/my_profile"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="311dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/baseline_keyboard_arrow_right_24"

            />
    </RelativeLayout>







    <TextView
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/order"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="179dp"
        android:textSize="20sp"
        android:paddingStart="25sp"
        android:paddingTop="10dp"
        android:textColor="#fff"
        android:background="@drawable/profile_shape"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/order"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="30dp"
        android:onClick="Order"
        android:background="@drawable/baseline_keyboard_arrow_right_24" />


    <TextView
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/review"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="226dp"
        android:textSize="20sp"
        android:paddingStart="25sp"
        android:paddingTop="10dp"
        android:textColor="#fff"
        android:background="@drawable/profile_shape"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reviews"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="340dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="226dp"
        android:background="@drawable/baseline_keyboard_arrow_right_24"
        />




    <TextView
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/address"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="272dp"
        android:textSize="20sp"
        android:paddingStart="25sp"
        android:paddingTop="10dp"
        android:textColor="#fff"
        android:background="@drawable/profile_shape"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/address"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="340dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="272dp"
        android:background="@drawable/baseline_keyboard_arrow_right_24"
        />

    <TextView
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/save_for_later"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="318dp"
        android:textSize="20sp"
        android:paddingStart="25sp"
        android:paddingTop="9dp"
        android:textColor="#fff"
        android:background="@drawable/profile_shape"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SaveForLater"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="340dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="318dp"
        android:background="@drawable/baseline_keyboard_arrow_right_24"
        />

    <TextView
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/notification"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="384dp"
        android:textSize="20sp"
        android:paddingStart="25sp"
        android:paddingTop="9dp"
        android:textColor="#fff"
        android:background="@drawable/profile_shape"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/notification"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="340dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="385dp"
        android:background="@drawable/baseline_keyboard_arrow_right_24"
        />

    <TextView
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/languages"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="431dp"
        android:textSize="20sp"
        android:paddingStart="25sp"
        android:paddingTop="9dp"
        android:textColor="#fff"
        android:background="@drawable/profile_shape"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/language"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="340dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="431dp"
        android:background="@drawable/baseline_keyboard_arrow_right_24"
        />



<!--    <TextView-->
<!--        android:layout_width="350dp"-->
<!--        android:layout_height="45dp"-->
<!--        android:text="@string/white_mode"-->
<!--        android:layout_marginStart="30dp"-->
<!--        android:layout_marginEnd="30dp"-->
<!--        android:layout_marginTop="490dp"-->
<!--        android:textSize="20sp"-->
<!--        android:paddingStart="25sp"-->
<!--        android:paddingTop="9dp"-->
<!--        android:textColor="#fff"-->
<!--        android:background="@drawable/profile_shape"-->
<!--        >-->
<!--        -->


<!--        <androidx.appcompat.widget.SwitchCompat-->
<!--            android:id="@+id/switch8"-->
<!--            android:layout_width="10dp"-->
<!--            android:layout_height="10dp"-->
<!--            android:background="#fff"-->
<!--            />-->



    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="25sp"
        android:background="@drawable/profile_shape"
        android:colorControlActivated="@color/switch_on_color"
        android:text="@string/white_mode"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />



    <TextView
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/customer"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="547dp"
        android:textSize="20sp"
        android:paddingStart="25sp"
        android:paddingTop="9dp"
        android:textColor="#fff"
        android:background="@drawable/profile_shape"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="340dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="548dp"
        android:background="@drawable/baseline_keyboard_arrow_right_24"
        />

    <TextView
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="@string/terms"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="594dp"
        android:textSize="20sp"
        android:paddingStart="25sp"
        android:paddingTop="9dp"
        android:textColor="#fff"
        android:background="@drawable/profile_shape"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="340dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="594dp"
        android:background="@drawable/baseline_keyboard_arrow_right_24"
        />

    <TextView
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:text="Return policy"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="641dp"
        android:textSize="20sp"
        android:paddingStart="25sp"
        android:paddingTop="9dp"
        android:textColor="#fff"
        android:background="@drawable/profile_shape"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="340dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="640dp"
        android:background="@drawable/baseline_keyboard_arrow_right_24"
        />



</FrameLayout>
<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context="Fragments.profileFragment">-->

<!--    &lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="@string/profile_fragment"-->
<!--        style="bold"-->
<!--        android:gravity="center"/>-->

<!--</FrameLayout>-->